Добавили подсказку про коммиты

--- a/Дз1.md
+++ b/Дз1.md
@@ -8,3 +8,8 @@ git init
 ```sh
 git add
 ```
+
+Сохранение|фиксация изменений [*с комментарием*](http.example.com "-m значит message, а в кавычках сам комментарий")
+```sh
+git commit -m "Message"
+```
