Добавили подсказку про log

--- a/Дз1.md
+++ b/Дз1.md
@@ -13,3 +13,15 @@ git add
 ```sh
 git commit -m "Message"
 ```
+
+Отображение зафиксированных коммитов
+```sh
+git log
+```
+### Дополнительно:
+
+* **git restore** - удалить последние изменения
+
+* **git checkout** - в логе выбрать/посмотреть один из комитов
+
+* **git checkout master** - вернуться из логов к основной ветке (последнему зафиксированному коммиту)
