--- a/Дз1.md
+++ b/Дз1.md
@@ -25,3 +25,5 @@ git log
 * **git checkout** - в логе выбрать/посмотреть один из комитов
 
 * **git checkout master** - вернуться из логов к основной ветке (последнему зафиксированному коммиту)
+
+> Почаще делайте коммиты с:
