Добавила новые подсказки к инструкции

--- a/Дз1.md
+++ b/Дз1.md
@@ -20,10 +20,40 @@ git log
 ```
 ### Дополнительно:
 
-* **git restore** - удалить последние изменения
 
 * **git checkout** - в логе выбрать/посмотреть один из комитов
 
 * **git checkout master** - вернуться из логов к основной ветке (последнему зафиксированному коммиту)
+* **q** - выйти из log
+
+## Удаления и отмена изменений
+
+Отмена последних изменений:
+```sh
+git restore
+```
+
+Удаление изменений:
+```sh
+git rm
+```
+Слияние веток:
+```sh
+git merge
+```
+Отмена слияния веток:
+```sh
+git merge --abort
+```
+Создание, просмотр текущих веток (+название ветки):
+```sh
+git branch
+```
+Удаление ветки:
+```sh
+git branch -d
+```
+
+
 
 > Почаще делайте коммиты с:
